# python-edax

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/edax/: __init__.py  binary.py  helpers.py  output.py
tests/edax/: test_binary.py  test_helpers.py  test_output.py
